compiladorARGOS(Consola)/Compilador ARGOS/analizador/compilador.java
/* Generated By:JJTree&JavaCC: Do not edit this line. compilador.java */
package analizador;
import java.io.*;
import java.util.Scanner;
public class compilador/*@bgen(jjtree)*/implements compiladorTreeConstants, compiladorConstants {/*@bgen(jjtree)*/
  protected static JJTcompiladorState jjtree = new JJTcompiladorState();public static boolean bandera;
        public static SymbolsTable tabla;
        public static String result;
        public static Converter converter;
        public static void main( String[] args )throws ParseException, Exception
        {
                try
                {
                        Scanner sc = new Scanner(System.in);
                        System.out.println("Presione 1 para analisis lexico, 2 para analisis sintactico: ");
                        int n = sc.nextInt();
                        if(n == 1){
                        System.out.println("Selecciono Analisis Lexico");
                        compilador analizador = new compilador( System.in ) ;
                        analizador.iniciarAnalisisLexico();
                        }
                        else if(n == 2){
                        System.out.println("Selecciono Analisis Sintactico");
                        compilador analizador = new compilador( System.in ) ;
                        SimpleNode nodo = analizador.iniciarAnalisisSintactico();
                        nodo.dump("");
                        System.out.println(result);
                        }
                        System.out.println("Analisis Finalizado Exitosamente");
                }
                catch(ParseException e)
                {
                        System.out.println(e.getMessage());
                        System.out.println("Analisis Finalizado Incorrectamente");
                }
        }
        public static boolean matchTypes(int valueID, int value){
                switch(valueID){
                        case INT:
                                return (value == NUMERO || value == INT);
            case FLOAT:
                return (value == NUMERO || value == DECIMAL || value == INT || value == FLOAT);
            default: return false;
                }
        }

  static final public void iniciarAnalisisLexico() throws ParseException {
 /*@bgen(jjtree) iniciarAnalisisLexico */
  SimpleNode jjtn000 = new SimpleNode(JJTINICIARANALISISLEXICO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MAIN:
        case CONSTANTE:
        case VARIABLE:
        case INPUT:
        case PRINT:
        case IF:
        case ELSE:
        case WHILE:
        case OR:
        case AND:
        case ASIGNACION:
        case RESTA:
        case SUMA:
        case MULTIPLICACION:
        case DIVISION:
        case MENOR:
        case MAYOR:
        case MENORIGUAL:
        case MAYORIGUAL:
        case IGUAL:
        case DIFERENTE:
        case PARENTA:
        case PARENTC:
        case LLAVEA:
        case LLAVEC:
        case PCOMA:
        case DCOMA:
        case CORCHETEA:
        case CORCHETEC:
        case INT:
        case FLOAT:
        case NUMERO:
        case DECIMAL:
        case CADENA:
        case IDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MAIN:
          jj_consume_token(MAIN);
          break;
        case CONSTANTE:
          jj_consume_token(CONSTANTE);
          break;
        case VARIABLE:
          jj_consume_token(VARIABLE);
          break;
        case INPUT:
          jj_consume_token(INPUT);
          break;
        case PRINT:
          jj_consume_token(PRINT);
          break;
        case IF:
          jj_consume_token(IF);
          break;
        case ELSE:
          jj_consume_token(ELSE);
          break;
        case WHILE:
          jj_consume_token(WHILE);
          break;
        case ASIGNACION:
          jj_consume_token(ASIGNACION);
          break;
        case RESTA:
          jj_consume_token(RESTA);
          break;
        case SUMA:
          jj_consume_token(SUMA);
          break;
        case MULTIPLICACION:
          jj_consume_token(MULTIPLICACION);
          break;
        case DIVISION:
          jj_consume_token(DIVISION);
          break;
        case MENOR:
          jj_consume_token(MENOR);
          break;
        case MAYOR:
          jj_consume_token(MAYOR);
          break;
        case OR:
          jj_consume_token(OR);
          break;
        case AND:
          jj_consume_token(AND);
          break;
        case MAYORIGUAL:
          jj_consume_token(MAYORIGUAL);
          break;
        case MENORIGUAL:
          jj_consume_token(MENORIGUAL);
          break;
        case IGUAL:
          jj_consume_token(IGUAL);
          break;
        case DIFERENTE:
          jj_consume_token(DIFERENTE);
          break;
        case PARENTA:
          jj_consume_token(PARENTA);
          break;
        case PARENTC:
          jj_consume_token(PARENTC);
          break;
        case LLAVEA:
          jj_consume_token(LLAVEA);
          break;
        case LLAVEC:
          jj_consume_token(LLAVEC);
          break;
        case PCOMA:
          jj_consume_token(PCOMA);
          break;
        case DCOMA:
          jj_consume_token(DCOMA);
          break;
        case CORCHETEA:
          jj_consume_token(CORCHETEA);
          break;
        case CORCHETEC:
          jj_consume_token(CORCHETEC);
          break;
        case INT:
          jj_consume_token(INT);
          break;
        case FLOAT:
          jj_consume_token(FLOAT);
          break;
        case NUMERO:
          jj_consume_token(NUMERO);
          break;
        case DECIMAL:
          jj_consume_token(DECIMAL);
          break;
        case CADENA:
          jj_consume_token(CADENA);
          break;
        case IDENTIFICADOR:
          jj_consume_token(IDENTIFICADOR);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  static final public SimpleNode iniciarAnalisisSintactico() throws ParseException {
 /*@bgen(jjtree) iniciarAnalisisSintactico */
  SimpleNode jjtn000 = new SimpleNode(JJTINICIARANALISISSINTACTICO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
                 tabla = new SymbolsTable(); converter = new Converter();
      jj_consume_token(MAIN);
      jj_consume_token(LLAVEA);
                                converter.setContext(Converter.MAINBLOCK);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CONSTANTE:
        case VARIABLE:
        case INPUT:
        case PRINT:
        case IF:
        case WHILE:
        case IDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        bloque();
      }
      jj_consume_token(LLAVEC);
                                                                                                 jjtree.closeNodeScope(jjtn000, true);
                                                                                                 jjtc000 = false;
                                                                                                result = converter.getResult(); {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void bloque() throws ParseException {
 /*@bgen(jjtree) bloque */
  SimpleNode jjtn000 = new SimpleNode(JJTBLOQUE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE:
        declararVariable();
        break;
      case CONSTANTE:
        declararConstante();
        break;
      case PRINT:
        impresion();
        break;
      case IDENTIFICADOR:
        asignacion();
        break;
      case INPUT:
        entrada();
        break;
      case IF:
        decisionIF();
        break;
      case WHILE:
        cicloWhile();
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  static final public void declararConstante() throws ParseException {
 /*@bgen(jjtree) declararConstante */
 SimpleNode jjtn000 = new SimpleNode(JJTDECLARARCONSTANTE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Symbol s; Token a; int typeKind; String typeKindID; String id; String value; int valueKind;
    try {
      jj_consume_token(CONSTANTE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        a = tipoInteger();
        break;
      case FLOAT:
        a = tipoFloat();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                            typeKind = a.kind; typeKindID = a.image;
      a = identificador();
                                                                                                                       id = a.image;
      jj_consume_token(ASIGNACION);
      a = operacion();
                                                                                                                                                                value = a.image; valueKind = a.kind;
                if(!matchTypes(typeKind, valueKind)){
                {if (true) throw new SemanticException("El valor no es admitido: " + value);}
                }
                                if(!tabla.contains(id)){
                                        s = new Symbol(typeKind, id);
                                        s.setSize(-1);
                                        s.setSymbolKind(Symbol.KCONSTANT);
                                        tabla.insert(id, s);
                                        }else{
                                                {if (true) throw new SemanticException("El simbolo " + id + " ya existe");}
                                                }
      jj_consume_token(PCOMA);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                 converter.insertConstant(typeKind, id, value);
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  static final public void declararVariable() throws ParseException {
 /*@bgen(jjtree) declararVariable */
 SimpleNode jjtn000 = new SimpleNode(JJTDECLARARVARIABLE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Symbol s; Token a; int typeKind; String typeKindID; String id; String value = "$"; int valueKind;
    try {
      jj_consume_token(VARIABLE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        a = tipoInteger();
        break;
      case FLOAT:
        a = tipoFloat();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                           typeKind = a.kind; typeKindID = a.image;
      a = identificador();
                                                                                                                      id = a.image;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASIGNACION:
        jj_consume_token(ASIGNACION);
        a = operacion();
                                                                                                                                                                value = a.image; valueKind = a.kind;
                if(!matchTypes(typeKind, valueKind)){
                {if (true) throw new SemanticException("El valor no es admitido: " + value);}
                }
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
                                if(!tabla.contains(id)){
                                        s = new Symbol(typeKind, id);
                                        s.setSize(-1);
                                        s.setSymbolKind(Symbol.KVARIABLE);
                                        tabla.insert(id, s);
                                        }else{
                                                {if (true) throw new SemanticException("El simbolo " + id + " ya existe");}
                                                }
      jj_consume_token(PCOMA);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                 converter.insertVariable(typeKind, id, value, "$");
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  static final public Token identificador() throws ParseException {
 /*@bgen(jjtree) identificador */
 SimpleNode jjtn000 = new SimpleNode(JJTIDENTIFICADOR);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFICADOR);
                                      jjtree.closeNodeScope(jjtn000, true);
                                      jjtc000 = false;
                                     {if (true) return t;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Token operacion() throws ParseException {
 /*@bgen(jjtree) operacion */
 SimpleNode jjtn000 = new SimpleNode(JJTOPERACION);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t; boolean isFloat = false; int index = -1; String operacion = "";
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFICADOR:
        t = identificador();
                            operacion = t.image;
                if(tabla.contains(t.image)){
                        t.kind = tabla.search(t.image).getType(); //Hay que asignarlo en esta primera parte, sino puede que t.kind == IDENTIFICADOR (no nos es util)
                        if(t.kind == FLOAT|| t.kind == INT) {
                                if(tabla.search(t.image).getType() == FLOAT){
                                        isFloat = true;
                                }
                        }
                        else{
                                t.kind = tabla.search(t.image).getType();
                                t.image = operacion;
                                {if (true) return t;}
                        }
                }else{
                        {if (true) throw new SemanticException("El simbolo : " + t.image + " no existe");}
                }
        break;
      case RESTA:
      case NUMERO:
      case DECIMAL:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RESTA:
          t = operadorRestar();
                                operacion = operacion + t.image;
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUMERO:
          t = valorNumeroEntero();
          break;
        case DECIMAL:
          t = valorNumeroDecimal();
                                                                                                        isFloat = true;
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                            operacion = operacion + t.image;
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RESTA:
        case SUMA:
        case MULTIPLICACION:
        case DIVISION:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SUMA:
          t = operadorSumar();
          break;
        case RESTA:
          t = operadorRestar();
          break;
        case MULTIPLICACION:
          t = operadorMultiplicar();
          break;
        case DIVISION:
          t = operadorDividir();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                            operacion = operacion + " " + t.image + " ";
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFICADOR:
          t = identificador();
                                    operacion = operacion + t.image;
                        if(tabla.contains(t.image)){
                                if(tabla.search(t.image).getType() == FLOAT||tabla.search(t.image).getType() == INT) {
                                        if(tabla.search(t.image).getType() == FLOAT){
                                                isFloat = true;
                                        }
                                }else{
                                        //t.kind = tabla.search(t.image).getType(); return t; 
                                        //Hay que mandar error ya que significa que no es del tipo adecuado y ya estamos en una operación aritmética
                                        {if (true) throw new SemanticException("No es posible realizar operaciones con esta variable "+t.image);}
                                }
                        }else{
                                {if (true) throw new SemanticException("El simbolo : " + t.image + " no existe");}
                        }
          break;
        case RESTA:
        case NUMERO:
        case DECIMAL:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RESTA:
            t = operadorRestar();
                                        operacion = operacion + t.image;
            break;
          default:
            jj_la1[12] = jj_gen;
            ;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NUMERO:
            t = valorNumeroEntero();
            break;
          case DECIMAL:
            t = valorNumeroDecimal();
                                                                                                        isFloat = true;
            break;
          default:
            jj_la1[13] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
                                                            operacion = operacion + t.image;
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                        if(isFloat){
                                t.kind = FLOAT;
                        }else{
                                t.kind = INT;
                        }
      }
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                 t.image = operacion; {if (true) return t;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }
